syntax = "proto3";
package pb;

//龙器升级
message DragonEquipUpLvReq{
	int32 heroIndex = 1;
	int32 id = 2;
}
message DragonEquipUpLvAck{
	int32 heroIndex = 1;
	int32 id = 2;
	int32 lv = 3;
}